Removed hardcoded data

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,9 +9,9 @@
   "AWS":{
     "AccessKeyId": "",
     "SecretKey": "",
-    "Username": "admin",
-    "Password": "MarinaGlupson2107@",
+    "Username": "<adminname>",
+    "Password": "<adminpass>",
     "Region": "us-east-1",
-    "Endpoint": "https://search-propertysearchtest-pvlw7vititpwbnkucgdygazmym.us-east-1.es.amazonaws.com/"
+    "Endpoint": "<endpointurl>"
   }
 }
